# roonsage

./: .coverage.claude.pid6.XoXzcxZx.Hxnf4OEv1xuh  .env.example  .gitattributes  .gitignore  .swiftlint.yml  CHANGELOG.md  CLAUDE.md  CLAUDE.md.pre-migration-20260706-1444  CONTRIBUTING.md  Caddyfile  Dockerfile  Modelfile  README.md  README.nl.md  SETUP.md  commit_fix.sh  commit_lastfm.sh  commit_premium_upgrade.sh  commit_prompt5.sh  commit_taste_bugfixes.sh  config.example.yaml  docker-compose.override.yml  docker-compose.yml  mcp_server.py  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.in  requirements.txt  system_prompt.md
.github/: PULL_REQUEST_TEMPLATE.md
backend/: __init__.py  album_consistency.py  analyzer.py  automation_engine.py  background_ai.py  background_tasks.py  circadian_auto.py  config.py  css_bundle.py  db.py  dependencies.py  discovery.py  enrichment_worker.py  event_bus.py  generator.py  genre_filter.py  lastfm_client.py  lastfm_sync.py  library_cache.py  listenbrainz_client.py  listenbrainz_sync.py  llm_client.py  main.py  models.py  music_research.py  musicbrainz_client.py  notifications.py  qobuz_api.py  qobuz_browser.py  recommender.py  results.py  roon_browse.py  roon_client.py  roon_connection.py  roon_intelligence.py  roon_playback.py  roon_search.py  roon_utils.py  scheduler.py  scrobble_import.py  (+7 more)
data/: dj_templates.yaml  mood_centroids.json  playlist_templates.yaml
docs/: NATIVE_APP_AUDIT.md  STATE.md  gemini-free-credit-guide.md  synology-setup-guide.md
frontend/: app.js  index.html  manifest.json  style.css  (+2 more)
(+887 files in other folders)
