[project]
name = "roonsage"
version = "12.0.0"
description = "AI-powered playlist curation and music intelligence for Roon"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
